# MGML

./: CMakeLists.txt  README.md  roblox.exgm  test.exgm  test.gml
examples/: example.mgml
src/: event.cpp  event.hpp  file.hpp  language.cpp  language.hpp  log.cpp  log.hpp  main.cpp  token.hpp  transpiler.cpp  transpiler.hpp
